<resources>
    <string name="app_name">TravelRun</string>
    <string name="action_settings">Settings</string>
    <string name="action_back">back</string>

    <string name="label_chat">Chats</string>
    <string name="label_people">People</string>
    <string name="label_new_message">New Message</string>
    <string name="label_conversations">Conversations</string>
    <string name="label_request">Requests</string>
    <string name="label_3">6</string>
    <string name="label_request_sent">Request Sent</string>
    <string name="label_footer1">My brother and I are wine tasting here in Sonoma! If you would like to join us, feel free to send me a request!</string>
    <string name="label_footer2">Student at Hamburg University.\nSingle.\nSpeak German, English and French</string>
    <string name="label_posted">Posted 8:00 am</string>
    <string name="label_footer1a">Hey I\'m in town for only a few days.</string>

    <string name="label_dummy_1">18-31</string>
    <string name="label_age_range">Age Range:</string>
    <string name="label_distance">Distance:</string>


    <string name="label_speak_language">What Languages Do You speak?</string>
    <string name="label_language">Language</string>
    <string name="label_language_filter">Language Filter</string>
    <string name="label_language_filter_text">Filter users by which language they speak.</string>
    <string name="label_currently_traveling">Currently Traveling</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_on">On</string>
    <string name="label_off">Off</string>
    <string name="label_leave_group">Leave Group</string>
    <string name="label_currently_hosting">Currently Hosting</string>

    <string name="label_public_profile">Public Profile</string>
    <string name="label_private_profile">Private Profile</string>

    <string name="label_all_not">Mute all Notifications</string>
    <string name="label_where_are_you_from">Where are you from?</string>
    <string name="label_traveling_help">TravelRun Help Center</string>
    <string name="label_report_problem">Report a problem</string>
    <string name="label_report_user">Report a user</string>
    <string name="label_dummy_2">Santa Rosa, CA</string>
    <string name="label_text_chat">Say something…</string>


    <string name="label_miles">miles</string>
    <string name="label_kilometers">kilometers</string>

    <string name="label_english">English</string>
    <string name="label_spanish">Spanish</string>
    <string name="label_french">French</string>
    <string name="label_mandarin">Mandarin</string>
    <string name="label_hindi">Hindi</string>
    <string name="label_german">German</string>
    <string name="label_japanese">Japanese</string>
    <string name="label_portuguese">Portugese</string>
    <string name="label_russian">Russian</string>
    <string name="label_arabic">Arabic</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="label_back">Back</string>

    <string name="label_1">1</string>
    <string name="label_2">2</string>
    <string name="label_3a">3</string>
    <string name="label_4">4</string>
    <string name="label_5">5</string>
    <string name="label_6">6</string>
    <string name="label_whatsup">What\'s up?</string>
    <string name="label_whatsup_text">What are you up to tonight, tomorrow, this weekend...etc?</string>
    <string name="label_biography">Biography</string>
    <string name="label_tell_us">Tell us about yourself...</string>
    <string name="label_my_circle">My Circle</string>
    <string name="search_hint">Search</string>
    <string name="label_group_name">Group Name</string>
    <string name="label_create">Create</string>
    </resources>
