<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main_"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:divider="@android:color/transparent"
    android:dividerHeight="0.0px"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="false"
    app:cardPreventCornerOverlap="false">

    <RelativeLayout
        android:layout_marginTop="0dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
         >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!--RadioGroup
                android:id="@+id/rg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"  -->
                <RadioButton
                    android:id="@+id/radio1a"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_english"
                    android:fontFamily="arial"
                    android:textStyle="normal"
                    android:textColor="@color/colorGray9"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/radio2a"
                    android:textSize="20sp"
                    android:fontFamily="arial"
                    android:textStyle="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_spanish"
                    android:textColor="@color/colorGray9"
                    />
                <RadioButton
                    android:id="@+id/radio3a"
                    android:textSize="20sp"
                    android:fontFamily="arial"
                    android:textStyle="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray9"
                    android:text="@string/label_french" />
                <RadioButton
                    android:id="@+id/radio4a"
                    android:textSize="20sp"
                    android:fontFamily="arial"
                    android:textStyle="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray9"
                    android:text="@string/label_mandarin" />
                <RadioButton
                    android:id="@+id/radio5a"
                    android:textSize="20sp"
                    android:fontFamily="arial"
                    android:textStyle="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray9"
                    android:text="@string/label_hindi" />
                <RadioButton
                    android:id="@+id/radio6a"
                    android:textSize="20sp"
                    android:fontFamily="arial"
                    android:textStyle="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray9"
                    android:text="@string/label_german" />
                <RadioButton
                    android:id="@+id/radio7a"
                    android:textSize="20sp"
                    android:fontFamily="arial"
                    android:textStyle="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray9"
                    android:text="@string/label_japanese" />
                <RadioButton
                    android:id="@+id/radio8a"
                    android:textSize="20sp"
                    android:fontFamily="arial"
                    android:textStyle="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray9"
                    android:text="@string/label_portuguese" />
                <RadioButton
                    android:id="@+id/radio9a"
                    android:textSize="20sp"
                    android:fontFamily="arial"
                    android:textStyle="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray9"
                    android:text="@string/label_russian" />
                <RadioButton
                    android:id="@+id/radio10a"
                    android:textSize="20sp"
                    android:fontFamily="arial"
                    android:textStyle="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray9"
                    android:text="@string/label_arabic" />
            <!--/RadioGroup-->
        </LinearLayout>
   </RelativeLayout>
</android.support.v7.widget.CardView>