<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main_"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:divider="@android:color/transparent"
    android:dividerHeight="0.0px"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:layout_margin="0dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="false"
    app:cardPreventCornerOverlap="false">


    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_marginTop="0dip"
        android:layout_marginLeft="0dip"
        android:layout_marginRight="0dip"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        ><!---android:background="@drawable/bg_white_shadow3"-->


        <ImageView
            android:id="@+id/iv_profile"
            android:visibility="visible"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/profile"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/iv_chat"
            android:visibility="visible"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/chat"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/app_name" />

        <RelativeLayout
            android:id="@+id/rl_center"
            android:layout_marginTop="0dip"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical|center_horizontal"
            >

            <TextView
                android:id="@+id/tv_title_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dip"
                android:layout_marginLeft="0dip"
                android:layout_marginStart="0dip"
                android:layout_marginTop="1dip"
                android:text="@string/label_chat"
                android:textColor="@color/colorGray"
                android:textSize="21sp"
                android:textStyle="bold"
                tools:text="@string/label_chat" />


            <TextView
                android:id="@+id/tv_people"
                android:layout_toEndOf="@+id/tv_title_1"
                android:layout_marginTop="1dip"
                android:layout_marginBottom="0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorCyan"
                android:textSize="21sp"
                android:text="@string/label_people"
                tools:text="@string/label_people"
                android:layout_marginStart="40dip"
                />


        </RelativeLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>