<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_marginBottom="0dip"
    >


    <RelativeLayout
        android:id="@+id/rl_main1"
        android:layout_marginTop="0dip"
        android:layout_marginLeft="0dip"
        android:layout_marginRight="0dip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <include
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/header_bar" />



        <ProgressBar
            android:id="@+id/pg_icon"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:visibility="visible"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            />

        <RelativeLayout
            android:id="@+id/rl_request"
            android:layout_below="@+id/rl_main_"
            android:layout_marginTop="0dip"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            >


            <TextView
                android:id="@+id/tv_title_request"
                android:layout_marginTop="5dip"
                android:layout_alignParentStart="@+id/tv_title_request_nro"
                android:layout_marginBottom="0dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:gravity="right"
                android:textColor="@color/colorGray"
                android:textSize="13sp"
                android:text="@string/label_request"
                tools:text="@string/label_request"
                android:layout_marginStart="5dip"
                android:layout_marginEnd="28dip"
                />

            <TextView
                android:id="@+id/tv_title_request_nro"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="0dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:gravity="right"
                android:textColor="@color/colorCyan"
                android:textSize="16sp"
                android:text="@string/label_3"
                tools:text="@string/label_3"
                android:layout_marginStart="5dip"
                android:layout_marginEnd="15dip"
                />


    </RelativeLayout>

     <LinearLayout
            android:id="@+id/list_request"
            android:layout_below="@+id/rl_request"
            android:layout_width="fill_parent"
            android:layout_marginTop="5dip"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_height="100dip">
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView2"
                 android:layout_marginLeft="5dip"
                 android:layout_marginRight="0dip"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
     </LinearLayout>


     <TextView
            android:id="@+id/tv_title_conversation"
            android:layout_below="@+id/list_request"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="0dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:visibility="visible"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:textColor="@color/colorGrayTitle"
            android:textSize="13sp"
            android:text="@string/label_conversations"
            tools:text="@string/label_conversations"
            android:layout_marginStart="40dip"
            />


      <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:visibility="visible"
            android:layout_below="@+id/tv_title_conversation"
            android:layout_marginTop="0dip"
            android:layout_marginBottom="0dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </RelativeLayout>



</android.support.constraint.ConstraintLayout>