<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_marginBottom="0dip"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dip"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/rl_main11"
            android:layout_marginTop="0dip"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <RelativeLayout
            android:id="@+id/rl_main1"
            android:layout_marginTop="0dip"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <include
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                layout="@layout/contact_bar" />



            <ProgressBar
                android:id="@+id/pg_icon"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:visibility="visible"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                />


            <EditText android:id="@+id/searchEditText"
                android:layout_below="@+id/rl_main_"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_rounded_grey"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="40dip"
                android:singleLine="true"
                android:imeOptions="actionSearch"
                android:hint="@string/label_group_name"
                android:textColorHint="@color/colorHintSearch"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="" />


            <View android:id="@+id/separator"
                android:layout_below="@+id/searchEditText"
                android:layout_marginTop="40dip"
                android:background="@color/colorHintSearch"
                android:layout_width = "fill_parent"
                android:layout_height="1dip"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_centerVertical ="true"
                />

             <LinearLayout
                    android:id="@+id/list_request"
                    android:layout_below="@+id/separator"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="40dip"
                    android:orientation="vertical"
                    android:visibility="visible"
                    android:layout_height="100dip">
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recyclerView2"
                         android:layout_marginStart="10dip"
                         android:layout_marginEnd="10dip"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         />
             </LinearLayout>

            <View android:id="@+id/separator2"
                android:layout_below="@+id/list_request"
                android:layout_marginTop="40dip"
                android:background="@color/colorHintSearch"
                android:layout_width = "fill_parent"
                android:layout_height="1dip"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_centerVertical ="true"
                />


            <RelativeLayout
                android:orientation="horizontal"
                android:id="@+id/check_1"
                android:layout_below="@+id/separator2"
                android:layout_marginTop="30dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal|center_vertical"
                android:layout_gravity="center_horizontal"
                android:weightSum="2"
                >

                    <TextView
                        android:id="@+id/tv_notification"
                        android:layout_marginTop="0dip"
                        android:layout_marginBottom="0dip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textStyle="normal"
                        android:textColor="@color/colorGrayDark"
                        android:textSize="20sp"
                        android:text="@string/label_notifications"
                        tools:text="@string/label_notifications"
                        android:layout_marginStart="25dip"
                        android:layout_marginEnd="5dip"
                        android:layout_weight="1"
                        />

                    <TextView
                        android:id="@+id/tv_notification_status"
                        android:layout_below="@+id/tv_notification"
                        android:layout_marginTop="0dip"
                        android:layout_marginBottom="0dip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textStyle="normal"
                        android:textColor="@color/colorGrayDark"
                        android:textSize="13sp"
                        android:text="@string/label_on"
                        tools:text="@string/label_on"
                        android:layout_marginStart="25dip"
                        android:layout_marginEnd="5dip"
                        android:layout_weight="1"
                        />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/sc_notification"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="10dp"
                        android:gravity="right"
                        android:checked="true"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        />

            </RelativeLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_below="@+id/check_1"
                android:layout_alignLeft="@+id/check_1"
                android:layout_marginTop="10dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                >
                <TextView
                    android:id="@+id/tv_leave_group"
                    android:layout_marginTop="0dip"
                    android:layout_marginBottom="0dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textStyle="normal"
                    android:textColor="@color/colorCyan"
                    android:textSize="20sp"
                    android:text="@string/label_leave_group"
                    tools:text="@string/label_leave_group"
                    android:layout_marginStart="25dip"
                    android:layout_marginEnd="5dip"
                    android:layout_weight="1"
                    />
            </LinearLayout>
        </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>